--- a/power/package.json
+++ b/power/package.json
@@ -44,7 +44,7 @@
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
     "hammerjs": "^2.0.8",
-    "http-server-legacy": "^0.11.1",
+    "http-server": "^0.12.3",
     "i": "^0.3.6",
     "knockout": "^3.5.1",
     "mapbox-gl": "0.53.1",
